// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TOCEntry is rendered 1`] = `
<div
  className="mapTocEntry"
  data-layerid="1"
  id="1"
>
  <EuiFlexGroup
    alignItems="center"
    className="mapTocEntry-visible"
    gutterSize="none"
    responsive={false}
  >
    <EuiFlexItem
      grow={false}
    >
      <LayerTocActions
        cloneLayer={[Function]}
        displayName="layer 1"
        fitToBounds={[Function]}
        layer={
          Object {
            "getDisplayName": [Function],
            "getId": [Function],
            "getTOCDetails": [Function],
            "hasErrors": [Function],
            "isVisible": [Function],
            "showAtZoomLevel": [Function],
          }
        }
        toggleVisible={[Function]}
        zoom={0}
      />
    </EuiFlexItem>
    <EuiFlexItem>
      <EuiLink
        color="text"
        data-test-subj="mapOpenLayerButtonlayer_1"
        onClick={[Function]}
        type="button"
      >
        <div
          className="eui-textTruncate eui-textLeft"
          style={
            Object {
              "width": 180,
            }
          }
        >
          layer 1
        </div>
      </EuiLink>
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <span
        className="mapTocEntry__grab"
      >
        <EuiIcon
          type="grab"
        />
      </span>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiSpacer
    size="s"
  />
  <div>
    TOC details mock
  </div>
</div>
`;

exports[`TOCEntry props isReadOnly 1`] = `
<div
  className="mapTocEntry"
  data-layerid="1"
  id="1"
>
  <EuiFlexGroup
    alignItems="center"
    className="mapTocEntry-visible"
    gutterSize="none"
    responsive={false}
  >
    <EuiFlexItem
      grow={false}
    >
      <LayerTocActions
        cloneLayer={[Function]}
        displayName="layer 1"
        fitToBounds={[Function]}
        isReadOnly={true}
        layer={
          Object {
            "getDisplayName": [Function],
            "getId": [Function],
            "getTOCDetails": [Function],
            "hasErrors": [Function],
            "isVisible": [Function],
            "showAtZoomLevel": [Function],
          }
        }
        toggleVisible={[Function]}
        zoom={0}
      />
    </EuiFlexItem>
    <EuiFlexItem>
      <EuiText
        grow={true}
        size="m"
      >
        <div
          className="eui-textTruncate eui-textLeft"
          style={
            Object {
              "width": 180,
            }
          }
        >
          layer 1
        </div>
      </EuiText>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiSpacer
    size="s"
  />
  <div>
    TOC details mock
  </div>
</div>
`;
